@@ -2,3 +2,6 @@
 Originally written in April 2019. There are quite a few bugs that still exist mainly to do with the client ui.
 Code has not been updated since it was first written.
 This repo was created in July 2022 to make the project include JavaFX as a library, in 2019 JavaFX was included with Java releases but has since been removed.
+
+Main Class: joel.poker.launch.Poker
+VM Launch Options: --module-path "lib\javafx\lib" --add-modules javafx.controls,javafx.fxml
